Update ESLint and CI configurations.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,4 +8,5 @@ jobs:
   test-e2e:
     uses: jill64/.github/.github/workflows/run-playwright.yml@main
     with:
+      pre-test: export PUBLIC_SENTRY_DSN= && npm run build:pages
       test-command: export PUBLIC_SENTRY_DSN= && npx playwright test
