--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "dev": "vite dev",
     "build:pages": "vite build",
-    "preview": "npm run build && vite preview",
+    "preview": "npm run build:pages && vite preview",
     "check": "svelte-kit sync && npx svelte-check",
     "lint": "npx eslint . && npm run check",
     "format": "npx prettier --write . --plugin prettier-plugin-svelte .",
@@ -13,7 +13,7 @@
   "devDependencies": {
     "@jill64/sentry-sveltekit-cloudflare": "1.0.0",
     "@jill64/svelte-dark-theme": "1.1.2",
-    "@jill64/svelte-i18n": "^0.2.1",
+    "@jill64/svelte-i18n": "0.2.2",
     "@jill64/svelte-toast": "1.0.0",
     "@jill64/tailwind-grid-auto": "1.1.1",
     "@jill64/tailwind-reactions": "1.0.1",
