Update lint script to include PUBLIC_SENTRY_DSN environment variable

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "build:pages": "vite build",
     "preview": "npm run build:pages && vite preview",
     "check": "svelte-kit sync && npx svelte-check",
-    "lint": "npx eslint . && npm run check",
+    "lint": "npx eslint . && export PUBLIC_SENTRY_DSN= && npm run check",
     "format": "npx prettier --write . --plugin prettier-plugin-svelte .",
     "test:e2e": "playwright test",
     "test": "vitest"
