--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite dev",
-    "build:pages": "vite build",
+    "build": "vite build",
     "preview": "npm run build:pages && vite preview",
     "check": "svelte-kit sync && npx svelte-check",
     "lint": "npx eslint . && npm run check",
