--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
-    "preview": "npm run build:pages && vite preview",
+    "preview": "npm run build && vite preview",
     "check": "svelte-kit sync && npx svelte-check",
     "lint": "npx eslint . && npm run check",
     "format": "npx prettier --write . --plugin prettier-plugin-svelte .",
