--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
     "build": "vite build",
     "preview": "npm run build && vite preview",
     "check": "svelte-kit sync && npx svelte-check",
-    "lint": "npx eslint . && npm run check",
-    "format": "npx prettier --write . --plugin prettier-plugin-svelte .",
+    "lint": "npm run check && npx eslint .",
+    "format": "npx prettier -w . --plugin prettier-plugin-svelte .",
     "test:e2e": "playwright test",
     "test": "vitest"
   },
+  "prettier": "@jill64/prettier-config",
   "devDependencies": {
+    "@jill64/eslint-config-svelte": "0.0.1",
+    "@jill64/prettier-config": "0.0.1",
+    "@jill64/playwright-config": "0.0.1",
     "@jill64/sentry-sveltekit-cloudflare": "1.4.0",
     "@jill64/svelte-dark-theme": "2.2.3",
     "@jill64/svelte-i18n": "0.2.6",
@@ -22,12 +26,7 @@
     "@playwright/test": "1.40.1",
     "@sveltejs/adapter-cloudflare": "2.3.3",
     "@sveltejs/kit": "1.27.6",
-    "@typescript-eslint/eslint-plugin": "6.13.1",
-    "@typescript-eslint/parser": "6.13.1",
     "autoprefixer": "10.4.16",
-    "eslint-config-prettier": "9.0.0",
-    "eslint-plugin-deprecation": "2.0.0",
-    "eslint-plugin-svelte": "2.35.1",
     "postcss": "8.4.31",
     "postcss-load-config": "4.0.2",
     "prettier-plugin-svelte": "3.1.2",
