--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "preview": "npm run build && vite preview",
     "check": "svelte-kit sync && npx svelte-check",
     "lint": "npm run check && npx eslint .",
-    "format": "npx prettier -w . --plugin prettier-plugin-svelte .",
+    "format": "npx @jill64/psx",
     "test:e2e": "playwright test",
     "test": "vitest"
   },
@@ -29,7 +29,6 @@
     "autoprefixer": "10.4.16",
     "postcss": "8.4.31",
     "postcss-load-config": "5.0.0",
-    "prettier-plugin-svelte": "3.1.2",
     "svelte": "4.2.8",
     "svelte-feather-icons": "4.0.1",
     "svelte-inline-modal": "1.1.0",
