--- a/package.json
+++ b/package.json
@@ -13,26 +13,15 @@
   "prettier": "@jill64/prettier-config",
   "devDependencies": {
     "@jill64/eslint-config-svelte": "0.0.3",
-    "@jill64/prettier-config": "0.0.1",
     "@jill64/playwright-config": "0.0.1",
+    "@jill64/prettier-config": "0.0.2",
     "@jill64/sentry-sveltekit-cloudflare": "1.4.1",
-    "@jill64/svelte-dark-theme": "2.2.4",
-    "@jill64/svelte-i18n": "0.2.6",
-    "@jill64/svelte-ogp": "0.1.0",
-    "@jill64/svelte-toast": "1.2.1",
-    "@jill64/tailwind-grid-auto": "1.2.0",
-    "@jill64/tailwind-reactions": "1.1.0",
-    "@jill64/typed-storage": "2.0.2",
+    "@jill64/svelte-suite": "^0.0.4",
+    "@jill64/svelte-tailwind": "^0.0.1",
     "@playwright/test": "1.40.1",
     "@sveltejs/adapter-cloudflare": "2.3.3",
     "@sveltejs/kit": "1.27.6",
-    "autoprefixer": "10.4.16",
-    "postcss": "8.4.31",
-    "postcss-load-config": "5.0.0",
     "svelte": "4.2.8",
-    "svelte-feather-icons": "4.0.1",
-    "svelte-inline-modal": "1.1.0",
-    "tailwindcss": "3.3.5",
     "typescript": "5.3.2",
     "vite": "5.0.4",
     "vitest": "0.34.6"
