--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
     "@jill64/playwright-config": "2.2.0",
     "@jill64/prettier-config": "1.0.0",
     "@jill64/sentry-sveltekit-cloudflare": "1.6.1",
-    "@jill64/svelte-suite": "1.0.10",
-    "@jill64/svelte-tailwind": "1.0.0",
+    "@jill64/svelte-suite": "1.1.0",
+    "@jill64/svelte-tailwind": "1.0.1",
     "@playwright/test": "1.40.1",
     "@sveltejs/adapter-cloudflare": "3.0.0",
-    "@sveltejs/kit": "1.30.3",
+    "@sveltejs/kit": "2.0.0",
     "svelte": "4.2.8",
     "typescript": "5.3.3",
     "vite": "5.0.9",
-    "vitest": "1.0.4"
+    "vitest": "1.0.4",
+    "@sveltejs/vite-plugin-svelte": "3.0.1"
   }
 }
