--- a/package.json
+++ b/package.json
@@ -6,16 +6,16 @@
     "preview": "npm run build && vite preview",
     "check": "svelte-kit sync && npx svelte-check",
     "lint": "npm run check && npx eslint .",
-    "format": "npx prettier -w .",
+    "format": "npx psvx",
     "test:e2e": "playwright test",
     "test": "vitest"
   },
+  "prettier": "@jill64/prettier-config",
   "devDependencies": {
     "@jill64/eslint-config-svelte": "2.0.2",
     "@jill64/playwright-config": "2.4.2",
-    "prettier-plugin-svelte": "3.3.2",
     "@jill64/sentry-sveltekit-cloudflare": "2.0.1",
-    "@jill64/svelte-suite": "1.2.261",
+    "@jill64/svelte-suite": "2.0.3",
     "@jill64/svelte-tailwind": "1.2.74",
     "@playwright/test": "1.49.1",
     "@sveltejs/adapter-cloudflare": "5.0.0",
