refactor: remove unused files and update configuration for improved build process

--- a/package.json
+++ b/package.json
@@ -3,27 +3,28 @@
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
-    "preview": "npm run build && vite preview",
-    "check": "svelte-kit sync && npx svelte-check",
-    "lint": "npm run check && npx eslint .",
-    "format": "npx psvx",
-    "test:e2e": "playwright test",
-    "test": "vitest"
+    "preview": "bun run build && vite preview",
+    "check": "svelte-kit sync && bunx svelte-check",
+    "lint": "bun run check && eslint .",
+    "format": "bunx psvx",
+    "test": "bun test **/*test.ts",
+    "test:e2e": "playwright test"
   },
   "prettier": "@jill64/prettier-config",
   "devDependencies": {
-    "@jill64/eslint-config-svelte": "2.0.6",
-    "@jill64/playwright-config": "2.4.2",
+    "@jill64/eslint-config-svelte": "2.2.0",
+    "@jill64/playwright-config": "3.0.0",
     "@jill64/sentry-sveltekit-cloudflare": "2.0.6",
     "@jill64/svelte-suite": "2.1.1",
     "@jill64/svelte-tailwind": "1.2.80",
-    "@playwright/test": "1.50.1",
-    "@sveltejs/adapter-cloudflare": "5.0.2",
-    "@sveltejs/kit": "2.16.1",
+    "@playwright/test": "1.51.0",
+    "@sveltejs/adapter-cloudflare": "5.0.3",
+    "@sveltejs/kit": "2.19.0",
+    "@sveltejs/vite-plugin-svelte": "5.0.3",
+    "@types/bun": "1.2.4",
     "svelte": "5.19.7",
-    "typescript": "5.7.3",
-    "vite": "6.0.11",
-    "vitest": "3.0.5",
-    "@sveltejs/vite-plugin-svelte": "5.0.3"
+    "eslint": "9.22.0",
+    "typescript": "5.8.2",
+    "vite": "6.2.1"
   }
 }
