--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,9 @@
 node_modules
 /build
 /test-results
-/.svelte-kit
+.svelte-kit
 .env
 .env.*
 !.env.example
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
-package-lock.json
