--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@jill64/eslint-config-svelte": "2.2.1",
     "@jill64/playwright-config": "3.0.0",
+    "@jill64/prettier-config": "1.0.0",
     "@jill64/sentry-sveltekit-cloudflare": "2.0.6",
     "@jill64/svelte-suite": "2.2.0",
     "@jill64/svelte-tailwind": "1.2.80",
